Adding rest proxy info in clusters
Signed-off-by: muralibasani <muralidahr.basani@aiven.io>